@@ -1,8 +1,8 @@
-RELEASE_DATE := "15-Feb-2008"
+RELEASE_DATE := "20-Mar-2008"
 RELEASE_MAJOR := 2
 RELEASE_MINOR := 0
-RELEASE_SUBLEVEL := 17
-RELEASE_EXTRALEVEL := .6
+RELEASE_SUBLEVEL := 18
+RELEASE_EXTRALEVEL :=
 RELEASE_NAME := dkms
 RELEASE_VERSION := $(RELEASE_MAJOR).$(RELEASE_MINOR).$(RELEASE_SUBLEVEL)$(RELEASE_EXTRALEVEL)
 RELEASE_STRING := $(RELEASE_NAME)-$(RELEASE_VERSION)
